--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
+    "react-typical": "^0.1.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.2.0"
   },
